--- a/.babelrc
+++ b/.babelrc
@@ -8,8 +8,8 @@
     }],
     "stage-2"
   ],
-
   "plugins": [
-    "react-hot-loader/babel"
+    "react-hot-loader/babel",
+    "babel-plugin-styled-components"
   ]
 }
