--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "coverage": "jest --coverage",
     "webpack:dev": "webpack --colors",
     "webpack:prod": "webpack --config webpack.production.config.js --colors",
-
     "predeploy": "yarn build",
     "deploy": "gh-pages -b master -d dist"
   },
@@ -44,7 +43,9 @@
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-hot-loader": "4.3.2",
-    "react-router-dom": "4.3.0"
+    "react-icons": "^2.2.7",
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^3.3.3"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
@@ -52,6 +53,7 @@
     "babel-eslint": "8.2.6",
     "babel-jest": "23.0.1",
     "babel-loader": "7.1.4",
+    "babel-plugin-styled-components": "^1.5.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
